<resources>
    <string name="app_name">Istudy</string>
    <string name="name">Выберите страну в которой хотели бы учиться</string>
    <string name="europe">Европа</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="res">https://www.ox.ac.uk/</string>
    <string name="res2">The University of Manchester 26,247 USD Рейтинг: 27</string>
    <string name="res3">https://www.manchester.ac.uk/</string>
    <string name="trs">Университеты в Британии</string>
    <string name="res4">The University of Edinburgh 20,800 USD Рейтинг: 26</string>
    <string name="res5">https://www.kcl.ac.uk/</string>
    <string name="res6">King\'s College London 20,000 USD Рейтинг: 28</string>
    <string name="res7">https://www.ed.ac.uk/</string>
    <string name="todo12">TODO</string>
    <string name="rts11">University of Oxford 41,945 USD Рейтинг: 6</string>
    <string name="todo22">TODO</string>
    <string name="num"><![CDATA[1>6]]></string>
    <string name="todo41">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="page"><![CDATA[2>6]]></string>
    <string name="res1">Aix-Marseille University 217 USD Рейтинг: 231</string>
    <string name="r">https://www.unistra.fr/</string>
    <string name="britain">Университеты в Британии</string>
    <string name="parisud">University Paris-Su 217 USD Рейтинг: 139</string>
    <string name="parissac">https://www.universite-paris-saclay.fr/</string>
    <string name="title">Выберите страну в которой хотели бы учиться</string>
    <string name="country">Америка</string>
    <string name="state_1">Вашингтон</string>
    <string name="state_2">Орегон</string>
    <string name="state_3">Мичиган</string>
    <string name="state_4">Аризона</string>
    <string name="state_5">Иллинойс</string>
    <string name="state_6">Невада</string>
    <string name="title_2">Университеты в Вашингтоне</string>
    <string name="first">University of Washington 51,321 USD Рейтинг: 31 Грант: есть</string>
    <string name="second">https://www.washington.edu/</string>
    <string name="third">Georgetown University 45,000 USD Рейтинг:252 Грант: есть</string>
    <string name="fourth">https://scs.georgetown.edu/</string>
    <string name="fifth">American University 39,000 USD Рейтинг:449 Грант: есть</string>
    <string name="sixth">https://www.american.edu/</string>
    <string name="seventh">Howard University 23,000 USD Рейтинг:693 Грант: есть</string>
    <string name="eight">https://howard.edu/</string>
    <string name="page_1">1 из 5</string>
    <string name="title_3">Университеты в Орегоне</string>
    <string name="nine">University of Oregon 9,000 USD Рейтинг: 428 Грант: есть</string>
    <string name="ten">https://www.oregon.edu/</string>
    <string name="eleven">Oregon State University 11,000 USD Рейтинг:284 Грант: есть</string>
    <string name="twelve">https://oregonstate.edu/</string>
    <string name="thirteen">Portland State University 20,000 USD Рейтинг:1024 Грант: нет</string>
    <string name="fourteen">https://www.pdx.edu/</string>
    <string name="fifteen">Western Oregon University 17,500 USD Рейтинг:1566 Грант: нет</string>
    <string name="sixteen">https://wou.edu/</string>
    <string name="page_2">1 из 9</string>
    <string name="name5">Выберите континент</string>
    <string name="rs1">https://www.toyo.ac.jp/en/</string>
    <string name="rs2">https://www.u-tokyo.ac.jp/en/</string>
    <string name="rs3">https://www.kyoto-u.ac.jp/en</string>
    <string name="rs4">https://www.waseda.jp/top/en/</string>
    <string name="number1">Toyo University 7,500 USD Рейтинг: 2104 Грант: нет </string>
    <string name="number2">The University of Tokyo 4,712 USD Рейтинг: 24 Грант: нет</string>
    <string name="number3">Kyoto University 4,712 USD Рейтинг:25 Грант: есть</string>
    <string name="number4">Waseda University 12,066 USD Рейтинг:343 Грант: есть</string>
    <string name="name3">Университеты в Японии</string>
    <string name="name4">Университеты в Китае</string>
    <string name="theme1">Peking University 3,785 USD Рейтинг: 55 Грант: есть</string>
    <string name="theme2">Tsinghua University 4,368 USD Рейтинг: 49 Грант: есть</string>
    <string name="theme3">Fudan University 3,348 USD Рейтинг:100 Грант: нет</string>
    <string name="theme4">Shanghai Tong University 3,610 USD Рейтинг:79 Грант: есть</string>
    <string name="rs5">https://english.pku.edu.cn/</string>
    <string name="rs6">https://www.tsinghua.edu.cn/en</string>
    <string name="rs7">https://www.fudan.edu.cn/en/</string>
    <string name="rs8">https://en.sjtu.edu.cn/</string>
    <string name="name2">Выберите страну в которой хотели бы учиться</string>
    <string name="name6">Подготовка к поступлению</string>
    <string name="rese1">Определяемся со страной</string>
    <string name="rese2">Определяемся с программой</string>
    <string name="rese3">Определяемся с финансированием</string>
    <string name="rese4">Сдаем международные тесты</string>
    <string name="rese5">Оформляем и отправляем документы</string>
    <string name="rese6">Ожидаем ответ от вуза</string>
    <string name="rese7">Выбираем лучший университет</string>
    <string name="rese8">Готовимся к отъезду</string>
    <string name="Namee">Выберите страну в которой хотели бы учиться</string>

    <string name="title_4">Выберите экзамен для поступления</string>
    <string name="exam_1">IELTS</string>
    <string name="exam_2">https://ielts.kg/en/</string>
    <string name="exam_3">TOEFL</string>
    <string name="exam_4">https://www.ets.org/toefl</string>
    <string name="exam_5">SAT</string>
    <string name="exam_6">https://collegereadiness.collegeboard.org/sat</string>
    <string name="exam_7">OPT</string>
    <string name="exam_8">https://edc.kg/ort/</string>
    <string name="Name">namr</string>
</resources>