<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/_467394938eb2fad79d4c4e22450873b_1"
        android:contentDescription="@string/europe" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@drawable/_537_photo_1"
        android:contentDescription="@string/europe" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/todo5"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@drawable/_dbd5e0b7103dc0647e7f7dd6395cfe4_1"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/university_of_manchester_1"
        android:contentDescription="@string/todo22" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="285dp"
        android:layout_height="70dp"
        android:layout_marginBottom="550dp"
        android:gravity="center"
        android:text="@string/britain"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="210dp"
        android:layout_height="552dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585">

        <TextView
            android:id="@+id/textView"
            android:layout_width="147dp"
            android:layout_height="61dp"
            android:text="@string/rts11"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/res"
            android:textColor="#3F51B5" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="146dp"
            android:layout_height="72dp"
            android:layout_marginTop="5dp"
            android:text="@string/res2"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="163dp"
            android:layout_height="34dp"
            android:layout_marginBottom="40dp"
            android:text="@string/res3"
            android:textColor="#3F51B5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="155dp"
            android:layout_height="64dp"
            android:layout_marginTop="5dp"
            android:text="@string/res6"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/res5"
            android:textColor="#3F51B5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="123dp"
            android:layout_height="74dp"
            android:layout_marginTop="25dp"
            android:text="@string/res4"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res7"
            android:textColor="#3F51B5" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="36dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/union"
        android:contentDescription="@string/todo6" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="65dp"
        android:layout_height="33dp"
        android:layout_marginStart="168dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/component_31" />

</androidx.constraintlayout.widget.ConstraintLayout>