<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="590dp"
        android:text="@string/title_2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image_10"
            android:layout_marginBottom="40dp"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image_11"
            android:layout_marginBottom="40dp"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image_12"
            android:layout_marginBottom="40dp"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image_13"
            android:contentDescription="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="190dp"
        android:layout_height="457dp"
        android:layout_marginStart="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="171dp"
            android:layout_height="34dp"
            android:text="@string/first"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="180dp"
            android:layout_height="68dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/second"
            android:textColor="@color/blue1"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/third"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="83dp"
            android:text="@string/fourth"
            android:textColor="@color/blue1"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/fifth"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="180dp"
            android:layout_height="74dp"
            android:text="@string/sixth"
            android:textColor="@color/blue1"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/seventh"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="180dp"
            android:layout_height="64dp"
            android:text="@string/eight"
            android:textColor="@color/blue1"
            android:textSize="13sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_1"
        android:textColor="@color/black"
        android:layout_marginTop="610dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="375dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_name"
        android:contentDescription="@null"/>

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="13dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:srcCompat="@drawable/tap" />

</androidx.constraintlayout.widget.ConstraintLayout>